# yasumu

./: .gitattributes  .gitignore  .prettierignore  .yarnrc.yml  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bun.lockb  cliff.toml  components.json  index.html  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: canary.yml  ci.yml  cla.yml  release.yml
apps/cli/: README.md  package.json  tsconfig.json  tsup.config.ts
apps/cli/src/: index.ts  version.ts  yasumu.ts
apps/cli/src/cli/: cli.ts
apps/website/: package.json
apps/website/src/app/: layout.tsx  page.tsx
apps/yasumu/: .prettierrc.json  CONTRIBUTING.md  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/yasumu/scripts/: copy-tanxium.mjs
apps/yasumu/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/yasumu/src-tauri/capabilities/: default.json  main.json
apps/yasumu/src-tauri/icons/: icon.icns
apps/yasumu/src-tauri/runtime/: 00_headers.js  00_performance.ts  00_timers.ts  01_headers.js  02_console.ts  02_runtime.ts  03_console.ts  03_test.ts  04_test.ts  05_schema.js  06_smtp.ts  _common.ts
apps/yasumu/src-tauri/src/: lib.rs  main.rs
apps/yasumu/src-tauri/src/commands/: mod.rs  scripts.rs  smtp.rs
apps/yasumu/src-tauri/src/commands/scripts/: mod.rs  yasumu_api.rs
apps/yasumu/src-tauri/src/commands/scripts/runtime/: 01_console.js  _common.d.ts
apps/yasumu/src-tauri/src/javascript/: runtime.rs
apps/yasumu/src-tauri/src/javascript/source/: 01_console.js  99_yasumu.ts
apps/yasumu/src-tauri/src/tanxium/: mod.rs
apps/yasumu/src-tauri/src/tanxium/builtins/: mod.rs
apps/yasumu/src-tauri/src/tanxium/builtins/crypto/: mod.rs
apps/yasumu/src-tauri/src/tanxium/builtins/performance/: mod.rs
apps/yasumu/src-tauri/src/tanxium/builtins/yasumu_runtime/: mod.rs
apps/yasumu/src-tauri/src/tanxium/runtime/: event_loop.rs  mod.rs  module_loader.rs
apps/yasumu/src-tauri/src/tanxium/typescript/: mod.rs
apps/yasumu/src-tauri/src/tanxium/yasumu_runtime/: mod.rs
apps/yasumu/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/yasumu/src/components/: EnvironmentSelector.tsx  KeyValueTable.tsx  NoWorkspace.tsx  OutputLayout.tsx  PrettyRespnseViewer.tsx  RequestTabs.tsx  ResizableApplicationLayout.tsx  YasumuBackgroundArt.tsx  app-sidebar.tsx  file-tree-sidebar.tsx  layout-group.tsx  mail-sidebar.tsx
apps/yasumu/src/hooks/: use-debounce.tsx  use-environment-loader.tsx  use-new-email.tsx  use-prettier.tsx  use-refresh-emails.tsx  use-text-editor.tsx  useClipboard.tsx  useHorizontalScroll.tsx  useWebWarning.tsx  useYasumuFileTree.tsx
apps/yasumu/src/lib/: utils.ts  yasumu.ts
apps/yasumu/src/providers/: ThemeProvider.tsx  WorkspaceProvider.tsx
apps/yasumu/src/stores/: AppLayout.ts  EnvStore.ts  GraphqlSchemaStore.ts  MailStore.tsx
changelogs/: 0.0.0_CHANGELOGS.md  0.0.1_CHANGELOGS.md
config/: tsup.config.ts
signatures/v1/: cla.json
src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/runtime/: 00_headers.ts  01_runtime.ts  02_console.ts  04_timers.ts  _common.ts
src-tauri/src/: lib.rs  main.rs  requests.rs
src-tauri/src/commands/: mod.rs  network.rs  smtp.rs  workspace.rs
src-tauri/src/tanxium/: mod.rs
src-tauri/src/tanxium/console/: mod.rs
src-tauri/src/tanxium/crypto/: mod.rs
src-tauri/src/tanxium/event_loop/: mod.rs
src-tauri/src/tanxium/typescript/: mod.rs
src-tauri/src/tanxium/yasumu_runtime/: mod.rs
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/api-testing/: page.tsx
src/app/api-testing/(components)/: history-tree.tsx  (+5 more)
src/app/settings/: layout.tsx  page.tsx
src/app/smtp/: page.tsx
src/components/alerts/: coming-soon.tsx
src/components/cards/: get-started-action.tsx
src/components/code/: copy-to-clipboard.tsx
src/components/console/: yasumu-console.tsx
src/components/interface/: PrettyResponseBodyViewer.tsx  RequestBodyEditor.tsx  RequestInput.tsx  RequestInputOptions.tsx  ResponseViewer.tsx  RoutesHistoryTree.tsx
src/components/layout/: app-view.tsx  content.tsx  loading.tsx  side-nav-menu.tsx  side-nav.tsx  workspace.tsx
src/components/magicui/: animated-shiny-text.tsx  file-tree.tsx
src/components/request/: additionals.tsx  body.tsx  headers.tsx  input.tsx  output.tsx  params.tsx  requestedRoutes.tsx  result.tsx  routes.tsx
src/components/smtp/: smtp-metadata.tsx
src/components/tables/: KeyValueTable.tsx  MutableKeyValueTable.tsx  RequestMethod.tsx
src/components/text-formats/: request-method.tsx
src/components/workspaces/: workspace-provider.tsx  workspace.tsx
src/context/: RequestContext.tsx
src/hooks/: use-debounce.ts  useListener.tsx  usePrettier.tsx  useStorage.tsx
src/lib/: constants.ts  header-info.ts  kv.ts  response-status.ts  script.ts  yasumu.ts
src/lib/api/: yasumu.ts
src/lib/api-testing/: authorization.ts  cookies.ts  environment.ts  headers.ts  interceptors.ts  request.ts  response.ts  variables.ts  yasumu.ts
src/lib/common/: commands.ts
src/lib/mock/: requests.ts
src/lib/scripts/: evaluator.ts  script.ts  yasumu-script.ts
src/lib/smtp/: YasumuSmtp.ts
src/screens/: __root.tsx  index.tsx
src/store/: requestStore.ts
src/stores/api-testing/: request-config.store.ts  request-history.store.ts  response.store.ts
src/stores/application/: layout.store.ts  workspace.store.ts
src/stores/smtp/: emails.ts
test/: yasumu.json
test/http/: Echo.GET  Hello World.GET  Testing.GET
(+213 files in other folders)
