[package]
name = "yasumu-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "yasumulib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.2"
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-store = "2.0.0-beta.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
