[package]
name = "yasumu"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yasumu_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.0.0-beta.9", features = [
    "charset",
    "cookies",
    "http2",
    "macos-system-configuration",
    "rustls-tls",
    "json",
    "multipart",
] }
tauri-plugin-websocket = "2.0.0-beta.9"
tauri-plugin-graphql = "2.0.0"
