[package]
name = "yasumu"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yasumu_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.0.0-rc", features = [
    "charset",
    "cookies",
    "http2",
    "macos-system-configuration",
    "rustls-tls",
    "json",
    "multipart",
] }
tauri-plugin-websocket = "2.0.0-rc"
tauri-plugin-fs = { version = "2.0.0-rc", features = ["watch"] }
tauri-plugin-store = "2.0.0-rc"
local-ip-address = "0.6.1"
mailin-embedded = "0.8.2"
tokio = "1.38.1"
boa_engine = "0.19.0"
tauri-plugin-dialog = "2.0.0-rc.1"
tauri-plugin-shell = "2.0.0-rc.1"
tauri-plugin-process = "2.0.0-rc.0"
mailparse = "0.15.0"
uuid = { version = "1.10.0", default-features = false, features = [
    "v4",
    "fast-rng",
] }
swc_fast_ts_strip = "0.7.0"
swc_common = "0.37.5"
boa_gc = "0.19.0"
