[package]
name = "yasumu"
version = "0.1.0"
description = "Yasumu"
authors = ["twilight <twilight@yasumu.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yasumu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["charset", "cookies", "http2", "macos-system-configuration", "rustls-tls", "json", "multipart"] }
tauri-plugin-websocket = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-store = "2"
local-ip-address = "0.6.1"
mailin-embedded = "0.8.2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
mailparse = "0.15.0"
uuid = { version = "1.10.0", features = ["fast-rng"] }
tokio = { version = "1.36.0", features = ["full"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
